# reader

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/xiaoyv/comic/reader/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/xiaoyv/comic/reader/: MainActivity.kt  MainActivityPage.kt  MainApplication.kt
app/src/main/java/com/xiaoyv/comic/reader/config/ann/: ContentType.kt  NavigationType.kt
app/src/main/java/com/xiaoyv/comic/reader/config/glide/: BookCoverLoader.kt  BookPageLoader.kt  FileEntityLoader.kt  GlideModule.kt
app/src/main/java/com/xiaoyv/comic/reader/config/types/: ContentType.kt  FeedType.kt  NavigationType.kt
app/src/main/java/com/xiaoyv/comic/reader/data/: Paging.kt
app/src/main/java/com/xiaoyv/comic/reader/data/entity/: BookEntity.kt  BookSeriesEntity.kt  FileEntity.kt
app/src/main/java/com/xiaoyv/comic/reader/navigation/: ComicNavigationActions.kt  ComicNavigationComponents.kt  MaterialFadeThroughKt.kt  MaterialSharedAxisKt.kt  MotionConstants.kt
app/src/main/java/com/xiaoyv/comic/reader/ui/component/: AppBar.kt  Buttons.kt  ImageViewer.kt  LazyList.kt  List.kt  Menus.kt  Page.kt  PageStateScreen.kt  Placeholder.kt  PopupHostScreen.kt  PopupHostState.kt  ProgressIndicator.kt  Scaffold.kt  SnackbarHostState.kt  WebView.kt
app/src/main/java/com/xiaoyv/comic/reader/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/xiaoyv/comic/reader/ui/utils/: ByteKt.kt  FileIconKt.kt  Flow.kt  GlideKt.kt  GsonKt.kt  LoadState.kt  LoadStateState.kt  Logger.kt  Md5Kt.kt  Modifiers.kt  PaddingValuesKt.kt  SavedStateHandleKt.kt  TimeKt.kt  UrlKt.kt  ViewModelKt.kt  WindowStateUtils.kt
app/src/main/res/values/: themes.xml
app/src/test/java/com/xiaoyv/comic/reader/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
lib-datasource/: build.gradle.kts
lib-datasource/script/: CMakeLists.txt
lib-datasource/src/androidTest/java/com/xiaoyv/comic/data/: ExampleInstrumentedTest.kt
lib-datasource/src/androidTest/java/com/xiaoyv/comic/datasource/: ExampleInstrumentedTest.kt
lib-datasource/src/main/cpp/: CMakeLists.txt  era.cpp
lib-datasource/src/main/cpp/libcommon/: CMakeLists.txt  logger.cpp  logger.h
lib-datasource/src/main/cpp/libdjvu-3.5.28/: CMakeLists.txt  DjvuDroidBridge.cpp
lib-datasource/src/main/cpp/libhqx-1.2/: CMakeLists.txt
lib-datasource/src/main/cpp/libmobi-0.11/: CMakeLists.txt  jni-mobi.c  jni-mobi.h
lib-datasource/src/main/cpp/libmobi-0.11/tools/: README.md  common.h  mobitool.h
lib-datasource/src/main/cpp/libunrar/: CMakeLists.txt  jni-rar.cpp
lib-datasource/src/main/java/com/xiaoyv/comic/datasource/: BookDataSource.kt  BookDataSourceFactory.kt  BookMetaData.kt  BookModel.kt  BookPage.kt
lib-datasource/src/main/java/com/xiaoyv/comic/datasource/book/: BookDataSource.kt  BookDataSourceFactory.kt  BookMetaData.kt  BookModel.kt  BookPage.kt
lib-datasource/src/main/java/com/xiaoyv/comic/datasource/book/archive/: ArchiveBookDataSource.kt  ArchiveBookPage.kt  ArchiveBookUnRar.kt
lib-datasource/src/main/java/com/xiaoyv/comic/datasource/book/djvu/: DjvuBookDataSource.kt  DjvuBookDocument.kt  DjvuBookOutline.kt  DjvuBookPage.kt
lib-datasource/src/main/java/com/xiaoyv/comic/datasource/book/epub/: EpubBookDataSource.kt
lib-datasource/src/main/java/com/xiaoyv/comic/datasource/book/mobi/: MobiBookDataSource.kt  MobiExtractor.kt
lib-datasource/src/main/java/com/xiaoyv/comic/datasource/book/pdf/: PdfBookDataSource.kt  PdfBookPage.kt
lib-datasource/src/main/java/com/xiaoyv/comic/datasource/book/remote/: RemoteDataSource.kt  RemotePage.kt
lib-datasource/src/main/java/com/xiaoyv/comic/datasource/cookie/: ClearableCookieJar.java  PersistentCookieJar.java
lib-datasource/src/main/java/com/xiaoyv/comic/datasource/cookie/cache/: CookieCache.java  IdentifiableCookie.java  SetCookieCache.java
lib-datasource/src/main/java/com/xiaoyv/comic/datasource/cookie/persistence/: CookiePersistor.java  SerializableCookie.java  SharedPrefsCookiePersistor.java
lib-datasource/src/main/java/com/xiaoyv/comic/datasource/impl/: BookDataSource.kt
lib-datasource/src/main/java/com/xiaoyv/comic/datasource/jni/: AnnotationType.java  NativeContext.kt  NativeLib.kt
lib-datasource/src/main/java/com/xiaoyv/comic/datasource/remote/: RemoteEntity.kt  RemoteLibrary.kt  RemoteLibraryConfig.kt  RemoteLibraryFactory.kt  RemoteLibraryType.kt
lib-datasource/src/main/java/com/xiaoyv/comic/datasource/series/: SeriesData.kt  SeriesEntity.kt  SeriesFactory.kt  SeriesModel.kt
lib-datasource/src/main/java/com/xiaoyv/comic/datasource/utils/: ExceptionKt.kt  FileExtensionKts.kt  FileKt.kt  Md5Kt.kt  NativeContext.kt  TempHolder.java  TimeKt.kt
lib-datasource/src/test/java/com/xiaoyv/comic/data/: ExampleUnitTest.kt
lib-datasource/src/test/java/com/xiaoyv/comic/datasource/: ExampleUnitTest.kt
lib-era/: .gitignore  build.gradle.kts
lib-era/script/: CMakeLibrary.cmake  CMakeLists.txt  build.clone.mupdf.sh  clone-mupdf.sh
lib-era/src/androidTest/java/com/xiaoyv/comic/era/: ExampleInstrumentedTest.kt
lib-era/src/main/cpp/: CMakeLists.txt  era.cpp
lib-era/src/main/cpp/libhqx-1.2/: CMakeLists.txt  jni-hqx.c
lib-era/src/main/cpp/liblogger/: CMakeLists.txt  logger.h
lib-era/src/main/cpp/libmobi-0.11/: CMakeLists.txt  jni-mobi.c
lib-era/src/main/cpp/libmobi-0.11/tools/: mobitool.c
lib-era/src/main/java/com/xiaoyv/comic/era/: NativeLib.kt  NativeMobi.kt
lib-era/src/main/java/com/xiaoyv/comic/era/bitmaps/: BitmapManager.kt  BitmapRef.kt  RawBitmap.kt
lib-era/src/test/java/com/xiaoyv/comic/era/: ExampleUnitTest.kt
lib-h5/: package-lock.json  package.json  vite.config.ts
lib-h5/public/: test.html
lib-h5/src/: App.vue  main.ts  style.css
lib-i18n/: build.gradle.kts
lib-i18n/src/androidTest/java/com/xiaoyv/comic/i18n/: ExampleInstrumentedTest.kt
lib-i18n/src/main/java/com/xiaoyv/comic/i18n/: RS.kt
lib-i18n/src/main/res/values/: strings.xml
lib-i18n/src/test/java/com/xiaoyv/comic/i18n/: ExampleUnitTest.kt
(+117 files in other folders)
